objects/Engage_Scoping_And_Engage_Standard__c.object
<CustomObject>
    <fields>
        <fullName>ASH_Eligible_Members__c</fullName>
        <label>ASH Eligible Members</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employees Only</fullName>
                </value>
                <value>
                    <fullName>All Members (Employees + Dependents)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASH_Gym_Reimbursement_Buyup__c</fullName>
        <inlineHelpText>Please choose Yes or No based on the client&apos;s participation in ASH Gym reimbursement.</inlineHelpText>
        <label>ASH Gym Reimbursement (Buy-up)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASH_Program_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ASH Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>HYPERLINK( &apos;/&apos;+Quote_Name__r.Opportunity.Account.Id ,Quote_Name__r.Account_Name__c)</formula>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Nutrition_Sleep_Programs__c</fullName>
        <label>Activity, Nutrition, Sleep Programs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advantage_Networks_Alpha_Prefixes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Specify All Alpha Prefixes Separated By Commas</inlineHelpText>
        <label>Advantage Networks Alpha Prefixes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advantage_Networks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advantage Networks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anthem_Basic_of_Enhanced_EAP__c</fullName>
        <label>Anthem Basic Or Enhanced EAP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anthem_Contract_Sign_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Anthem Contract Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anthem_Control_State__c</fullName>
        <formula>IF(ISPICKVAL(Quote_Name__r.Opportunity.Account.WGS_Contracting_Situs_State__c,&apos;&apos;),TEXT(Quote_Name__r.Opportunity.Account.NASCO_Contracting_Situs_State__c),TEXT(Quote_Name__r.Opportunity.Account.WGS_Contracting_Situs_State__c))</formula>
        <label>Anthem Control State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Dental_Carrier__c</fullName>
        <inlineHelpText>Must be administratively integrated.</inlineHelpText>
        <label>Anthem Dental Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem Dental Prime And Complete</fullName>
                </value>
                <value>
                    <fullName>Anthem Dental Essential Choice PPO</fullName>
                </value>
                <value>
                    <fullName>Anthem Dental Consumer Choice PPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anthem_Executive_Manager__c</fullName>
        <formula>Quote_Name__r.Opportunity.Account.AccountOwnerName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Executive / Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Health_Guide__c</fullName>
        <inlineHelpText>Please choose Yes or No based on the client&apos;s access to Anthem Health Guide.</inlineHelpText>
        <label>Anthem Health Guide</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anthem_Health_Rewards__c</fullName>
        <inlineHelpText>Please choose Yes or No based on the client&apos;s participation in Anthem Health rewards.</inlineHelpText>
        <label>Anthem Health Rewards</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anthem_Implementation_Lead__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Anthem Implementation Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Only_Or_Multi_Carrier__c</fullName>
        <label>Anthem Only Or Multi Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem (Only)</fullName>
                </value>
                <value>
                    <fullName>Multi-Carrier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anthem_Renewal_or_New_Sale__c</fullName>
        <formula>CASE(Quote_Name__r.Opportunity.OpportunityRecordTypeName__c, &apos;New Business&apos;,&apos;New Sale&apos;,&apos;In Group Change&apos;,&apos;Renewal&apos;,&apos;Renewal&apos;,&apos;Renewal&apos;,&apos;In Group Add Product&apos;,&apos;Renewal&apos;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Existing Client or New Sale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_To_Provide_Comm_Support__c</fullName>
        <inlineHelpText>Will Anthem Provide Communications Support To Drive Registration?</inlineHelpText>
        <label>Anthem To Provide Comm Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BioIQ__c</fullName>
        <inlineHelpText>Please choose Yes or No based on the client&apos;s desire to offer this non-incentivized program.</inlineHelpText>
        <label>BioIQ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Care_And_Cost_Finder_CCF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Care And Cost Finder (CCF)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Castlight_Contract_Sign_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Castlight Contract Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Castlight_Opportunity_Approval_Stage__c</fullName>
        <formula>Castlight_Opportunity__r.CSLT_Opportunity_Stage__c</formula>
        <label>Castlight Opportunity Approval Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Castlight_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Castlight Opportunity</label>
        <referenceTo>Castlight_Opportunity__c</referenceTo>
        <relationshipLabel>Engage Scoping And Engage Standard</relationshipLabel>
        <relationshipName>Engage_Scoping_And_Engage_Standard</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Castlight_Submission_Status_Formula__c</fullName>
        <formula>TEXT(Castlight_Submission_Status__c)</formula>
        <label>Castlight Submission Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Castlight_Submission_Status__c</fullName>
        <label>Castlight Submission Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Ready for Submission</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Update After Initial Submission</fullName>
                </value>
                <value>
                    <fullName>Ready for Re-Submission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>TEXT(Quote_Name__r.GroupNumber__r.ClaimSystem__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Billing_Address__c</fullName>
        <formula>Quote_Name__r.Opportunity.Account.ShippingStreet &amp; BR() &amp;
Quote_Name__r.Opportunity.Account.ShippingCity &amp; &quot; &quot; &amp;
Quote_Name__r.Opportunity.Account.ShippingState &amp; &quot; &quot; &amp;
Quote_Name__r.Opportunity.Account.ShippingPostalCode &amp; BR() &amp;
Quote_Name__r.Opportunity.Account.ShippingCountry</formula>
        <label>Client Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Have_Benefit_Enrollment_Platform__c</fullName>
        <label>Client Have Benefit Enrollment Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Have_Own_Wellness_Vendors__c</fullName>
        <inlineHelpText>Does The Client Have Its Own Wellness Vendors That We Should Promote In Engage Application?</inlineHelpText>
        <label>Client Have Own Wellness Vendors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Integrating_Wellness_Bundle__c</fullName>
        <label>Client Integrating Wellness Bundle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Market__c</fullName>
        <formula>TEXT(Quote_Name__r.Opportunity.Account.Anthem_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Preferred_Launch_Date_For_Engage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What Is The Client Preferred Launch Date For Engage</inlineHelpText>
        <label>Client Preferred Launch Date For Engage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Termination_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Termination Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clinical_Shared_Data_And_Experiences__c</fullName>
        <inlineHelpText>Please indicate all applicable.</inlineHelpText>
        <label>Clinical Shared Data And Experiences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LiveHealthOnline</fullName>
                </value>
                <value>
                    <fullName>Anthem Health Guide</fullName>
                </value>
                <value>
                    <fullName>Future Moms</fullName>
                </value>
                <value>
                    <fullName>MyHealth Advantage</fullName>
                </value>
                <value>
                    <fullName>Integrated Health Model</fullName>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>Virtual Second Opinion</fullName>
                </value>
                <value>
                    <fullName>24/7 Nurse Line</fullName>
                </value>
                <value>
                    <fullName>Total Health, Total You Tier 1</fullName>
                </value>
                <value>
                    <fullName>Total Health, Total You Tier 2</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Castlight Contract With Client</fullName>
                </value>
                <value>
                    <fullName>Anthem Contract With Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delta_Dental_State__c</fullName>
        <label>Delta Dental State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>Dentegra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_Credit_Budget__c</fullName>
        <label>Device Credit Budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>Name + &quot; - &quot; + Group_Number__c + &quot; - &quot; + Opportunity_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_Client_Have_Anthem_Health_Rewards__c</fullName>
        <label>Does Client Have Anthem Health Rewards</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_The_Client_Have_Onsite_Clinics__c</fullName>
        <label>Does The Client Have Onsite Clinics</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESI_Carve_In__c</fullName>
        <label>Anthem Rx (ESI Carve-In)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EYC_And_FAD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Estimate Your Costs (EYC) And Find A Doctor (FAD)</inlineHelpText>
        <label>EYC And FAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elite_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elite Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Embed_Registration_Into_AE_And_NHE__c</fullName>
        <inlineHelpText>Will Client Embed Registration For Engage Into Annual Enrollment And New Hire Enrollment?</inlineHelpText>
        <label>Embed Registration Into AE And NHE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date_Of_Customer_Contract__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter the end date of the current contract. This will not cause termination unless notification is provided prior to this date.</inlineHelpText>
        <label>End Date Of Customer Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Essentials_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Essentials Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Essentials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Essentials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Essentials_non_Anthem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Essentials (non-Anthem)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Receipt_Date_Of_1st_Prod_Elig_File__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Est Receipt Date Of 1st Prod Elig File</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Est_Receipt_Date_of_1st_Prod_OE_File__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Est Receipt Date of 1st Prod OE File</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Membership__c</fullName>
        <formula>Number_Total_Membership_Elite__c  +  Number_Total_Membership_Elite_Plus__c  +  Number_Total_Membership_Essentials__c  +  Number_Total_Membership_Essentials_non__c + Number_Total_Membership_Essentials_Plus__c</formula>
        <label>Estimated Total Membership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Client_Changes_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Existing Client Changes/Updates Effective Date</inlineHelpText>
        <label>Existing Client Changes Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSA_Health_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSA Health Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Dental_Claims__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>FOR ANTHEM Dental ONLY
Future dental claims:</inlineHelpText>
        <label>Future Dental Claims</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Future_Dental_Group_Numbers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>FOR ANTHEM DENTAL ONLY
Provide group numbers for this client
that should be used to obtain/provide. Separate Group numbers with commas.</inlineHelpText>
        <label>Future Dental Group Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Pharmacy_Claims__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>FOR ANTHEM RX ONLY
Future pharmacy claims:</inlineHelpText>
        <label>Future Pharmacy Claims</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Future_Pharmacy_Group_Numbers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>FOR ANTHEM RX ONLY
Provide group numbers for this client
that should be used to obtain/provide. Separate Group numbers with commas.</inlineHelpText>
        <label>Future Pharmacy Group Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>Quote_Name__r.GroupNumber__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRA_Health_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HRA Health Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSA_Health_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HSA Health Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IF_EAP_Select_All_That_Apply__c</fullName>
        <label>IF EAP, Select All That Apply</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>ComPsych</fullName>
                </value>
                <value>
                    <fullName>Ceridian LifeWorks</fullName>
                </value>
                <value>
                    <fullName>Chesnut</fullName>
                </value>
                <value>
                    <fullName>E4 Health</fullName>
                </value>
                <value>
                    <fullName>Optum</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Behav_Health_Select_All_That_Apply__c</fullName>
        <label>If Behav Health, Select All That Apply</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Beacon Health Options</fullName>
                </value>
                <value>
                    <fullName>Carolina Behavior Health Alliance</fullName>
                </value>
                <value>
                    <fullName>ComPsych</fullName>
                </value>
                <value>
                    <fullName>Magelian Health</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_CARVE_OUT_Select_All_That_Apply__c</fullName>
        <label>If CARVE-OUT, Select All That Apply</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna Pharmacy</fullName>
                </value>
                <value>
                    <fullName>CVS Caremark</fullName>
                </value>
                <value>
                    <fullName>Express Scripts</fullName>
                </value>
                <value>
                    <fullName>Humana</fullName>
                </value>
                <value>
                    <fullName>OptumRx</fullName>
                </value>
                <value>
                    <fullName>Prime Therapeutics (BCBS NE &amp; HCSC-carve in only)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Multi_Carrier_Select_All_That_Apply__c</fullName>
        <label>If Multi-Carrier, Select All That Apply</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>AmeriBen</fullName>
                </value>
                <value>
                    <fullName>Arkansas Blue Cross Blue Shield</fullName>
                </value>
                <value>
                    <fullName>Aultcare</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>CoreSource</fullName>
                </value>
                <value>
                    <fullName>Gunderson Health Plan</fullName>
                    <label>Gundersen Health Plan</label>
                </value>
                <value>
                    <fullName>HealthPartners</fullName>
                </value>
                <value>
                    <fullName>HealthSCOPE Benefits</fullName>
                </value>
                <value>
                    <fullName>Humana</fullName>
                </value>
                <value>
                    <fullName>UnitedHealthcare</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_No_Specify_Alternative_Arrangement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If No, Specify Alternative Arrangement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Anthem_Dental_Specify_Carriers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other Anthem Dental Specify Carriers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Clinical_Please_Specify__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other Clinical, Please Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Please_Specify_BH_EAP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, Please Specify BH EAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Specify_BEP_Administrator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, Specify BEP Administrator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Specify_Behavior_Health__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, Specify Behavior Health</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Specify_Ecosystem_Integration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, Specify Ecosystem Integration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Specify_Medical_Carriers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, Specify Medical Carriers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Specify_Network__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Custom arrangements not reflected in the Anthem provider directory may result in additional feeds and limited support.</inlineHelpText>
        <label>If Other, Specify Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Specify_Rx_Carriers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, Specify Rx Carriers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_Please_Indicate_Rx_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Yes, Please Indicate Rx Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_Select_All_Applicable_Wellness__c</fullName>
        <inlineHelpText>Please Select All Applicable Wellness Bundle Packages</inlineHelpText>
        <label>If Yes, Select All Applicable Wellness</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Biometrics And Coaching</fullName>
                </value>
                <value>
                    <fullName>Biometrics And Coaching/Financial Health</fullName>
                </value>
                <value>
                    <fullName>Resilience And Financial Health</fullName>
                </value>
                <value>
                    <fullName>Nutrition And Sleep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>